# natural_editor

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  Makefile  main.cpp  main.hpp  untitled.blend
b/: CMakeCache.txt  Makefile  cmake_install.cmake  launch-natural.sh
bui2/: CMakeCache.txt  Makefile  cmake_install.cmake  launch-natural.sh  natural
build.bk/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  launch-natural.sh  natural  text.f.glsl
build_bak/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  callgrind.out.20093  instancing.fragmentshader  instancing.vertexshader  letter.1.ele  letter.1.node  letter.1.poly  line.fragmentshader  line.vertexshader  projects.xml~  strings (copy).html  strings.html  text.f.glsl  text.v.glsl
cmake/Modules/: FindIconv.cmake  FindLibXML++.cmake
common/: controls.cpp  debug.cpp  debug.hpp  handle.cpp  handle.hpp  object3d.cpp  object3d.hpp  shader.cpp  shader_utils.hpp  startup.cpp  startup.hpp  text.cpp  text.c~  text.hpp  types.cpp  types.hpp
common/backed/: file_helper.cpp  file_helper.hpp  shapes_bk.cpp  shapes_bk.hpp  test.cpp  test.hpp
common/environment/: debug_frame.cpp  debug_frame.hpp  debug_world_helper.hpp  world.cpp  world.hpp
common/filesystem/: directory.cpp  directory.hpp  disk.cpp  disk.hpp  file.cpp  file.hpp
common/input/: menu.cpp  menu.hpp  mouse.cpp  mouse.hpp
common/space/: grid.cpp  grid.hpp  helper.cpp  helper.hpp  object3d.cpp  object3d.hpp  physics.cpp  physics.hpp  scene.cpp  scene.hpp  text.cpp  text.hpp
common/text/: canvas.cpp  canvas.hpp  letter.cpp  letter.hpp  strings.cpp  strings.hpp  text.cpp  text.hpp  word.cpp  word.hpp
copy/: natural.db  projects.xml  text.v.glsl
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
shaders/: green.fragmentshader
src2/: main.cpp
tests/: newtestclass.cpp  newtestclass.hpp  newtestclass1.cpp  newtestclass1.hpp  newtestrunner.cpp  newtestrunner1.cpp
